fix: numbered input with label not fitting in 1 line, nor growing below

--- a/web/src/features/EmailMarketing/WorkflowBuilder/TargetingBuilder/components/TargetingFilterGroup/components/TargetingFilter/components/TargetingFilterValue/TargetingFilterValue.scss
+++ b/web/src/features/EmailMarketing/WorkflowBuilder/TargetingBuilder/components/TargetingFilterGroup/components/TargetingFilter/components/TargetingFilterValue/TargetingFilterValue.scss
@@ -2,7 +2,8 @@
 
 [aria-label='Filter value'] {
   .number-input-with-label {
-    width: 10rem;
+    width: 7rem;
+    flex: 1 1 auto;
   }
 
   &.expanded {
