--- a/web/src/features/shared/ui/components/NumberInputWithLabel/NumberInputWithLabel.scss
+++ b/web/src/features/shared/ui/components/NumberInputWithLabel/NumberInputWithLabel.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  flex: 1 1 auto;
 
   input {
     padding-right: $spacer-9;
